[gd_scene load_steps=16 format=2]

[ext_resource path="res://MainMenuFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://MainMenuBox.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -960.0
margin_right = 540.0
margin_bottom = 960.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundGlobal" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -1500.0
margin_right = 1000.0
margin_bottom = 1500.0
color = Color( 0, 0, 0, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundGame" type="ColorRect" parent="."]
margin_top = 270.0
margin_right = 1080.0
margin_bottom = 1650.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -882.0
margin_top = -1158.0
margin_right = 1593.0
margin_bottom = -908.0
rect_rotation = 30.0
rect_pivot_offset = Vector2( -1257.31, 1187.33 )
color = Color( 0.835294, 0.823529, 0.054902, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -883.0
margin_top = 114.0
margin_right = 1573.0
margin_bottom = 364.0
rect_rotation = 30.0
rect_pivot_offset = Vector2( -1257.31, 1187.33 )
color = Color( 0.835294, 0.823529, 0.054902, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -507.5
margin_top = -360.0
margin_right = 507.5
margin_bottom = 360.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 276.0
margin_right = 739.0
margin_bottom = 177.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 0.862745 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = ExtResource( 3 )
text = "START"

[node name="Inventory" type="Button" parent="VBoxContainer"]
margin_left = 120.0
margin_top = 181.0
margin_right = 894.0
margin_bottom = 358.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 0.862745 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = ExtResource( 3 )
text = "INVENTORY"

[node name="Achievements" type="Button" parent="VBoxContainer"]
margin_top = 362.0
margin_right = 1015.0
margin_bottom = 539.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = ExtResource( 3 )
text = "ACHIEVEMENTS"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 338.0
margin_top = 543.0
margin_right = 676.0
margin_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = ExtResource( 3 )
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Inventory" to="." method="_on_Inventory_pressed"]
[connection signal="pressed" from="VBoxContainer/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
